fix: countdown shift layout

--- a/src/containers/Landing/Introduce/style.module.scss
+++ b/src/containers/Landing/Introduce/style.module.scss
@@ -85,9 +85,9 @@
 
                 span {
                   width: 100%;
+                  min-width: rem(94);
 
                   @include min-tablet {
-                    // width: rem(112px);
                     width: fit-content;
                   }
                 }
@@ -120,10 +120,8 @@
               }
             }
 
-
             font-size: rem(14px);
             padding: rem(8px) rem(20px);
-
 
             @include min-tablet {
               font-size: rem(16px);
